strict server
