# pkg/openapi/api/v1/api.gen.go
@@ -1,7 +1,7 @@
-// Package task_v1 provides primitives to interact with the openapi HTTP API.
+// Package api_v1 provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.6.0 DO NOT EDIT.
-package task_v1
+package api_v1
 
 import (
 	"context"
@@ -10,10 +10,10 @@ import (
 	"net/http"
 	"time"
 
+	"github.com/fedotovmax/spec-first-openapi/transport/http/request"
 	"github.com/go-chi/chi/v5"
 	"github.com/oapi-codegen/runtime"
 	strictnethttp "github.com/oapi-codegen/runtime/strictmiddleware/nethttp"
-	openapi_types "github.com/oapi-codegen/runtime/types"
 )
 
 // Defines values for Status.
@@ -49,6 +49,12 @@ type Error struct {
 	Message string `json:"message"`
 }
 
+// Ok defines model for ok.
+type Ok struct {
+	// Ok Флаг - все хорошо или нет
+	Ok bool `json:"ok"`
+}
+
 // Status Текущее состояние жизненного цикла задачи: * `backlog` - Задача создана, но еще не взята в работу. * `in_progress` - Над задачей ведется работа. * `on_hold` - Работа приостановлена (ждем ответа, заблокирована). * `completed` - Задача успешно выполнена. * `canceled` - Задача отменена и не будет выполнена.
 type Status string
 
@@ -58,7 +64,7 @@ type Task struct {
 	CreatedAt time.Time `json:"created_at"`
 
 	// Id ID задачи
-	Id openapi_types.UUID `json:"id"`
+	Id string `json:"id"`
 
 	// IsActive Отвечает за скрытость или видимость задачи
 	IsActive bool `json:"is_active"`
@@ -68,6 +74,18 @@ type Task struct {
 
 	// Title Заголовок задачи
 	Title string `json:"title"`
+}
+
+// UpdateTask defines model for update_task.
+type UpdateTask struct {
+	// IsActive Отвечает за скрытость или видимость задачи
+	IsActive *bool `json:"is_active,omitempty"`
+
+	// Status Текущее состояние жизненного цикла задачи: * `backlog` - Задача создана, но еще не взята в работу. * `in_progress` - Над задачей ведется работа. * `on_hold` - Работа приостановлена (ждем ответа, заблокирована). * `completed` - Задача успешно выполнена. * `canceled` - Задача отменена и не будет выполнена.
+	Status *Status `json:"status,omitempty"`
+
+	// Title Заголовок задачи
+	Title request.Nullable[string] `json:"title,omitempty"`
 }
 
 // ValidationError defines model for validation_error.
@@ -89,13 +107,19 @@ type ValidationErrorItem struct {
 }
 
 // Id defines model for id.
-type Id = openapi_types.UUID
+type Id = string
+
+// PatchTaskByIDJSONRequestBody defines body for PatchTaskByID for application/json ContentType.
+type PatchTaskByIDJSONRequestBody = UpdateTask
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
 	// Get task by id
-	// (GET /api/v1/tasks/{id})
+	// (GET /tasks/{id})
 	GetTaskByID(w http.ResponseWriter, r *http.Request, id Id)
+	// Patch task by id
+	// (PATCH /tasks/{id})
+	PatchTaskByID(w http.ResponseWriter, r *http.Request, id Id)
 }
 
 // Unimplemented server implementation that returns http.StatusNotImplemented for each endpoint.
@@ -103,8 +127,14 @@ type ServerInterface interface {
 type Unimplemented struct{}
 
 // Get task by id
-// (GET /api/v1/tasks/{id})
+// (GET /tasks/{id})
 func (_ Unimplemented) GetTaskByID(w http.ResponseWriter, r *http.Request, id Id) {
+	w.WriteHeader(http.StatusNotImplemented)
+}
+
+// Patch task by id
+// (PATCH /tasks/{id})
+func (_ Unimplemented) PatchTaskByID(w http.ResponseWriter, r *http.Request, id Id) {
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
@@ -125,7 +155,7 @@ func (siw *ServerInterfaceWrapper) GetTaskByID(w http.ResponseWriter, r *http.Re
 	// ------------- Path parameter "id" -------------
 	var id Id
 
-	err = runtime.BindStyledParameterWithOptions("simple", "id", chi.URLParam(r, "id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true, Type: "string", Format: "uuid"})
+	err = runtime.BindStyledParameterWithOptions("simple", "id", chi.URLParam(r, "id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true, Type: "string", Format: ""})
 	if err != nil {
 		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "id", Err: err})
 		return
@@ -133,6 +163,31 @@ func (siw *ServerInterfaceWrapper) GetTaskByID(w http.ResponseWriter, r *http.Re
 
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.GetTaskByID(w, r, id)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r)
+}
+
+// PatchTaskByID operation middleware
+func (siw *ServerInterfaceWrapper) PatchTaskByID(w http.ResponseWriter, r *http.Request) {
+
+	var err error
+
+	// ------------- Path parameter "id" -------------
+	var id Id
+
+	err = runtime.BindStyledParameterWithOptions("simple", "id", chi.URLParam(r, "id"), &id, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true, Type: "string", Format: ""})
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "id", Err: err})
+		return
+	}
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.PatchTaskByID(w, r, id)
 	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -256,7 +311,10 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 	}
 
 	r.Group(func(r chi.Router) {
-		r.Get(options.BaseURL+"/api/v1/tasks/{id}", wrapper.GetTaskByID)
+		r.Get(options.BaseURL+"/tasks/{id}", wrapper.GetTaskByID)
+	})
+	r.Group(func(r chi.Router) {
+		r.Patch(options.BaseURL+"/tasks/{id}", wrapper.PatchTaskByID)
 	})
 
 	return r
@@ -318,11 +376,71 @@ func (response GetTaskByIDdefaultJSONResponse) VisitGetTaskByIDResponse(w http.R
 	return json.NewEncoder(w).Encode(response.Body)
 }
 
+type PatchTaskByIDRequestObject struct {
+	Id   Id `json:"id"`
+	Body *PatchTaskByIDJSONRequestBody
+}
+
+type PatchTaskByIDResponseObject interface {
+	VisitPatchTaskByIDResponse(w http.ResponseWriter) error
+}
+
+type PatchTaskByID200JSONResponse Ok
+
+func (response PatchTaskByID200JSONResponse) VisitPatchTaskByIDResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(200)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type PatchTaskByID400JSONResponse ValidationError
+
+func (response PatchTaskByID400JSONResponse) VisitPatchTaskByIDResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(400)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type PatchTaskByID404JSONResponse Error
+
+func (response PatchTaskByID404JSONResponse) VisitPatchTaskByIDResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(404)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type PatchTaskByID500JSONResponse Error
+
+func (response PatchTaskByID500JSONResponse) VisitPatchTaskByIDResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(500)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
+type PatchTaskByIDdefaultJSONResponse struct {
+	Body       Error
+	StatusCode int
+}
+
+func (response PatchTaskByIDdefaultJSONResponse) VisitPatchTaskByIDResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(response.StatusCode)
+
+	return json.NewEncoder(w).Encode(response.Body)
+}
+
 // StrictServerInterface represents all server handlers.
 type StrictServerInterface interface {
 	// Get task by id
-	// (GET /api/v1/tasks/{id})
+	// (GET /tasks/{id})
 	GetTaskByID(ctx context.Context, request GetTaskByIDRequestObject) (GetTaskByIDResponseObject, error)
+	// Patch task by id
+	// (PATCH /tasks/{id})
+	PatchTaskByID(ctx context.Context, request PatchTaskByIDRequestObject) (PatchTaskByIDResponseObject, error)
 }
 
 type StrictHandlerFunc = strictnethttp.StrictHTTPHandlerFunc
@@ -373,6 +491,39 @@ func (sh *strictHandler) GetTaskByID(w http.ResponseWriter, r *http.Request, id 
 		sh.options.ResponseErrorHandlerFunc(w, r, err)
 	} else if validResponse, ok := response.(GetTaskByIDResponseObject); ok {
 		if err := validResponse.VisitGetTaskByIDResponse(w); err != nil {
+			sh.options.ResponseErrorHandlerFunc(w, r, err)
+		}
+	} else if response != nil {
+		sh.options.ResponseErrorHandlerFunc(w, r, fmt.Errorf("unexpected response type: %T", response))
+	}
+}
+
+// PatchTaskByID operation middleware
+func (sh *strictHandler) PatchTaskByID(w http.ResponseWriter, r *http.Request, id Id) {
+	var request PatchTaskByIDRequestObject
+
+	request.Id = id
+
+	var body PatchTaskByIDJSONRequestBody
+	if err := json.NewDecoder(r.Body).Decode(&body); err != nil {
+		sh.options.RequestErrorHandlerFunc(w, r, fmt.Errorf("can't decode JSON body: %w", err))
+		return
+	}
+	request.Body = &body
+
+	handler := func(ctx context.Context, w http.ResponseWriter, r *http.Request, request interface{}) (interface{}, error) {
+		return sh.ssi.PatchTaskByID(ctx, request.(PatchTaskByIDRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "PatchTaskByID")
+	}
+
+	response, err := handler(r.Context(), w, r, request)
+
+	if err != nil {
+		sh.options.ResponseErrorHandlerFunc(w, r, err)
+	} else if validResponse, ok := response.(PatchTaskByIDResponseObject); ok {
+		if err := validResponse.VisitPatchTaskByIDResponse(w); err != nil {
 			sh.options.ResponseErrorHandlerFunc(w, r, err)
 		}
 	} else if response != nil {
